Compiler med scope rules/Compiler/src/SPLADParser.java
// Generated from SPLAD.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SPLADParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__58=1, T__57=2, T__56=3, T__55=4, T__54=5, T__53=6, T__52=7, T__51=8, 
		T__50=9, T__49=10, T__48=11, T__47=12, T__46=13, T__45=14, T__44=15, T__43=16, 
		T__42=17, T__41=18, T__40=19, T__39=20, T__38=21, T__37=22, T__36=23, 
		T__35=24, T__34=25, T__33=26, T__32=27, T__31=28, T__30=29, T__29=30, 
		T__28=31, T__27=32, T__26=33, T__25=34, T__24=35, T__23=36, T__22=37, 
		T__21=38, T__20=39, T__19=40, T__18=41, T__17=42, T__16=43, T__15=44, 
		T__14=45, T__13=46, T__12=47, T__11=48, T__10=49, T__9=50, T__8=51, T__7=52, 
		T__6=53, T__5=54, T__4=55, T__3=56, T__2=57, T__1=58, T__0=59, STRINGTOKEN=60, 
		LETTER=61, DIGIT=62, NOTZERODIGIT=63, COMMENT=64, WS=65, OTHER=66;
	public static final String[] tokenNames = {
		"<INVALID>", "'from'", "'*'", "'['", "'A'", "'<'", "'false'", "'!='", 
		"'<='", "'to'", "'double'", "'drink'", "'nothing'", "'char'", "'case'", 
		"'AND'", "'bool'", "')'", "'='", "'const'", "'call'", "'begin'", "'!'", 
		"'<--'", "'LOW'", "'button'", "'using'", "']'", "'default'", "','", "'of'", 
		"'-'", "'while'", "'('", "':'", "'if'", "'int'", "'break'", "'OR'", "'else'", 
		"'add'", "'HIGH'", "'true'", "'is'", "'function'", "'.'", "'INPUT'", "'step'", 
		"'+'", "'return'", "';'", "'container'", "'OUTPUT'", "'>'", "'string'", 
		"'switch'", "'/'", "'>='", "'remove'", "'end'", "STRINGTOKEN", "LETTER", 
		"DIGIT", "NOTZERODIGIT", "COMMENT", "WS", "' '"
	};
	public static final int
		RULE_program = 0, RULE_roots = 1, RULE_root = 2, RULE_dcl = 3, RULE_drinkdcl = 4, 
		RULE_drinkstmts = 5, RULE_drinkstmt = 6, RULE_drinkstmtsend = 7, RULE_type = 8, 
		RULE_constant = 9, RULE_primitivetype = 10, RULE_id = 11, RULE_assign = 12, 
		RULE_assignend = 13, RULE_expr = 14, RULE_term = 15, RULE_comp = 16, RULE_addsub = 17, 
		RULE_muldiv = 18, RULE_factor = 19, RULE_callid = 20, RULE_arrayidend = 21, 
		RULE_arraycall = 22, RULE_numeric = 23, RULE_addsubend = 24, RULE_muldivend = 25, 
		RULE_timesdivide = 26, RULE_plusminusorempty = 27, RULE_plusminus = 28, 
		RULE_numericend = 29, RULE_string = 30, RULE_functioncall = 31, RULE_callexpr = 32, 
		RULE_subcallexpr = 33, RULE_subcallexprend = 34, RULE_cast = 35, RULE_compend = 36, 
		RULE_comparisonoperator = 37, RULE_termend = 38, RULE_termsymbol = 39, 
		RULE_exprend = 40, RULE_exprsymbol = 41, RULE_function = 42, RULE_functionmid = 43, 
		RULE_functionend = 44, RULE_params = 45, RULE_subparams = 46, RULE_subparamsend = 47, 
		RULE_stmts = 48, RULE_stmt = 49, RULE_nontermif = 50, RULE_endif = 51, 
		RULE_nontermelse = 52, RULE_nontermwhile = 53, RULE_from = 54, RULE_block = 55, 
		RULE_nontermswitch = 56, RULE_cases = 57, RULE_endcase = 58, RULE_breakend = 59;
	public static final String[] ruleNames = {
		"program", "roots", "root", "dcl", "drinkdcl", "drinkstmts", "drinkstmt", 
		"drinkstmtsend", "type", "constant", "primitivetype", "id", "assign", 
		"assignend", "expr", "term", "comp", "addsub", "muldiv", "factor", "callid", 
		"arrayidend", "arraycall", "numeric", "addsubend", "muldivend", "timesdivide", 
		"plusminusorempty", "plusminus", "numericend", "string", "functioncall", 
		"callexpr", "subcallexpr", "subcallexprend", "cast", "compend", "comparisonoperator", 
		"termend", "termsymbol", "exprend", "exprsymbol", "function", "functionmid", 
		"functionend", "params", "subparams", "subparamsend", "stmts", "stmt", 
		"nontermif", "endif", "nontermelse", "nontermwhile", "from", "block", 
		"nontermswitch", "cases", "endcase", "breakend"
	};

	@Override
	public String getGrammarFileName() { return "SPLAD.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public SPLADParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public RootsContext roots() {
			return getRuleContext(RootsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); roots();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootsContext extends ParserRuleContext {
		public RootContext root() {
			return getRuleContext(RootContext.class,0);
		}
		public RootsContext roots() {
			return getRuleContext(RootsContext.class,0);
		}
		public RootsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roots; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitRoots(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootsContext roots() throws RecognitionException {
		RootsContext _localctx = new RootsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_roots);
		try {
			setState(126);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 10:
			case 11:
			case 13:
			case 16:
			case 19:
			case 25:
			case 36:
			case 44:
			case 51:
			case 54:
			case LETTER:
			case COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(123); root();
				setState(124); roots();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public DrinkdclContext drinkdcl() {
			return getRuleContext(DrinkdclContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(SPLADParser.COMMENT, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_root);
		try {
			setState(137);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128); dcl();
				setState(129); match(50);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131); assign();
				setState(132); match(50);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134); function();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(135); match(COMMENT);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(136); drinkdcl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); type();
			setState(140); assign();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrinkdclContext extends ParserRuleContext {
		public DrinkstmtsContext drinkstmts() {
			return getRuleContext(DrinkstmtsContext.class,0);
		}
		public CallidContext callid() {
			return getRuleContext(CallidContext.class,0);
		}
		public DrinkdclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drinkdcl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitDrinkdcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DrinkdclContext drinkdcl() throws RecognitionException {
		DrinkdclContext _localctx = new DrinkdclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_drinkdcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(11);
			setState(143); callid();
			setState(144); match(43);
			setState(145); match(21);
			setState(146); drinkstmts();
			setState(147); match(59);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrinkstmtsContext extends ParserRuleContext {
		public DrinkstmtContext drinkstmt() {
			return getRuleContext(DrinkstmtContext.class,0);
		}
		public DrinkstmtsendContext drinkstmtsend() {
			return getRuleContext(DrinkstmtsendContext.class,0);
		}
		public DrinkstmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drinkstmts; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitDrinkstmts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DrinkstmtsContext drinkstmts() throws RecognitionException {
		DrinkstmtsContext _localctx = new DrinkstmtsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_drinkstmts);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149); drinkstmt();
			setState(150); drinkstmtsend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrinkstmtContext extends ParserRuleContext {
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public CallidContext callid() {
			return getRuleContext(CallidContext.class,0);
		}
		public DrinkstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drinkstmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitDrinkstmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DrinkstmtContext drinkstmt() throws RecognitionException {
		DrinkstmtContext _localctx = new DrinkstmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_drinkstmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); numeric();
			setState(153); match(30);
			setState(154); callid();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrinkstmtsendContext extends ParserRuleContext {
		public DrinkstmtsContext drinkstmts() {
			return getRuleContext(DrinkstmtsContext.class,0);
		}
		public DrinkstmtsendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drinkstmtsend; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitDrinkstmtsend(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DrinkstmtsendContext drinkstmtsend() throws RecognitionException {
		DrinkstmtsendContext _localctx = new DrinkstmtsendContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_drinkstmtsend);
		try {
			setState(159);
			switch (_input.LA(1)) {
			case 29:
				enterOuterAlt(_localctx, 1);
				{
				setState(156); match(29);
				setState(157); drinkstmts();
				}
				break;
			case 50:
				enterOuterAlt(_localctx, 2);
				{
				setState(158); match(50);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public PrimitivetypeContext primitivetype() {
			return getRuleContext(PrimitivetypeContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161); constant();
			setState(162); primitivetype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_constant);
		try {
			setState(166);
			switch (_input.LA(1)) {
			case 19:
				enterOuterAlt(_localctx, 1);
				{
				setState(164); match(19);
				}
				break;
			case 10:
			case 11:
			case 13:
			case 16:
			case 25:
			case 36:
			case 51:
			case 54:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitivetypeContext extends ParserRuleContext {
		public PrimitivetypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitivetype; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitPrimitivetype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitivetypeContext primitivetype() throws RecognitionException {
		PrimitivetypeContext _localctx = new PrimitivetypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_primitivetype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 10) | (1L << 11) | (1L << 13) | (1L << 16) | (1L << 25) | (1L << 36) | (1L << 51) | (1L << 54))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode LETTER() { return getToken(SPLADParser.LETTER, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170); match(LETTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public CallidContext callid() {
			return getRuleContext(CallidContext.class,0);
		}
		public AssignendContext assignend() {
			return getRuleContext(AssignendContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172); callid();
			setState(173); assignend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignendContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignend; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitAssignend(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignendContext assignend() throws RecognitionException {
		AssignendContext _localctx = new AssignendContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_assignend);
		try {
			setState(178);
			switch (_input.LA(1)) {
			case 23:
				enterOuterAlt(_localctx, 1);
				{
				setState(175); match(23);
				setState(176); expr();
				}
				break;
			case 9:
			case 50:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprendContext exprend() {
			return getRuleContext(ExprendContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180); term();
			setState(181); exprend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public TermendContext termend() {
			return getRuleContext(TermendContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183); comp();
			setState(184); termend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public AddsubContext addsub() {
			return getRuleContext(AddsubContext.class,0);
		}
		public CompendContext compend() {
			return getRuleContext(CompendContext.class,0);
		}
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitComp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_comp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186); addsub();
			setState(187); compend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddsubContext extends ParserRuleContext {
		public MuldivContext muldiv() {
			return getRuleContext(MuldivContext.class,0);
		}
		public AddsubendContext addsubend() {
			return getRuleContext(AddsubendContext.class,0);
		}
		public AddsubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addsub; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitAddsub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddsubContext addsub() throws RecognitionException {
		AddsubContext _localctx = new AddsubContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_addsub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189); muldiv();
			setState(190); addsubend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MuldivContext extends ParserRuleContext {
		public MuldivendContext muldivend() {
			return getRuleContext(MuldivendContext.class,0);
		}
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public MuldivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_muldiv; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitMuldiv(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MuldivContext muldiv() throws RecognitionException {
		MuldivContext _localctx = new MuldivContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_muldiv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192); factor();
			setState(193); muldivend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public FunctioncallContext functioncall() {
			return getRuleContext(FunctioncallContext.class,0);
		}
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public CastContext cast() {
			return getRuleContext(CastContext.class,0);
		}
		public CallidContext callid() {
			return getRuleContext(CallidContext.class,0);
		}
		public TerminalNode DIGIT() { return getToken(SPLADParser.DIGIT, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public DrinkstmtContext drinkstmt() {
			return getRuleContext(DrinkstmtContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
